--- a/firrtl/main.css
+++ b/firrtl/main.css
@@ -1,10 +1,10 @@
 html, body {
   background: #000;
-  height: 100%;
+  /* height: 100%; */
   margin: 0;
 }
 .container {
-  height: 100%;
+  /* height: 100%; */
   margin: 0;
 }
 .hole { background: #000; }
@@ -12,9 +12,9 @@ html, body {
   background: #111;
   display: block;
   margin: auto;
-  top: 50%;
-  position: relative;
-  transform: translateY(-50%);
+  /* top: 50%; */
+  /* position: relative; */
+  /* transform: translateY(-50%); */
 }
 /* rect {
   fill:hsla(0, 100%, 100%, 0.1);
