--- a/inspect/main.css
+++ b/inspect/main.css
@@ -11,9 +11,17 @@ input {
   font-size: 16px;
   font-family: 'Roboto Mono', monospace;
 }
-.spacer { fill: #888; }
-.module { color: #e74b4b; }
-.task { color: #9f5af0; }
-.wire { color: #ffb76a; }
-.reg { color: #74b6f2; }
+
 .comment { color: #4f4f4f; }
+
+.spacer  { fill: #888; }
+.module  { color: hsl(55, 100%, 89%); }
+.task    { color: #9f5af0; }
+
+.logic   { color: hsl(150, 100%, 60%); }
+.wire    { color: hsl(170, 100%, 60%); }
+.reg     { color: hsl(190, 100%, 60%); }
+.integer { color: hsl(210, 100%, 60%); }
+.string  { color: hsl(230, 100%, 60%); }
+.int     { color: hsl(250, 100%, 60%); }
+.bit     { color: hsl(270, 100%, 60%); }
