--- a/vcd/wavehub.css
+++ b/vcd/wavehub.css
@@ -1,10 +1,15 @@
+@font-face {
+  font-family: Iosevka;
+  src: url('/iosevka-term-light.woff2') format('woff2')
+}
+
 body {
   margin: 0px;
   border: 0px;
   background: #111;
   color: #fff;
-  font-family: 'Roboto mono', monospace;
-  font-size: 16px;
+  font-family: 'Iosevka';
+  /* font-size: 16px; */
 }
 
 .cursor {
@@ -12,6 +17,19 @@ body {
   stroke: #fff7;
   stroke-width: 1px;
   z-index: 1;
+}
+
+.values text {
+  font-size: 14px;
+  text-anchor: middle;
+  fill: #fff;
+}
+
+text.xred {
+  fill: hsl(0, 100%, 50%);
+}
+text.zxviolet {
+  fill: hsl(287, 100%, 67%);
 }
 
 .sidebar {
@@ -25,21 +43,23 @@ body {
   cursor: col-resize;
 }
 .cm-s-blackboard.CodeMirror {
-  font-family: 'Roboto mono', monospace;
+  /* font-family: 'Roboto mono', monospace; */
+  font-family: 'Iosevka';
   line-height: 1.5;
   font-size: 16px;
   height: auto;
   width: 220px;
-  background: #0003;
+  background: #0007;
 }
 
 .CodeMirror {
-  font-family: 'Roboto mono', monospace;
-  line-height: 1.5;
+  /* font-family: 'Roboto mono', monospace; */
+  font-family: 'Iosevka';
+  line-height: 2;
   font-size: 16px;
   height: auto;
   width: 220px;
-  background: #0003;
+  background: #0007;
 }
 
 .CodeMirror-line > span {
