--- a/vcd/vcdrom.css
+++ b/vcd/vcdrom.css
@@ -94,7 +94,7 @@ text.zxviolet {
   transform: translate(-50%, -50%);
 }
 
-.cm-s-blackboard.CodeMirror {
+.cm-s-waveql.CodeMirror {
   /* font-family: 'Roboto mono', monospace; */
   /* padding: 20 0 20 0; */
   font-family: 'Iosevka';
@@ -102,7 +102,7 @@ text.zxviolet {
   font-size: 16px;
   top: 20px;
   bottom: 20px;
-  width: 220px;
+  width: 320px;
   background: #0007;
 }
 
@@ -115,10 +115,47 @@ text.zxviolet {
   bottom: 20px;
   height: calc(100% - 40px);
   left: 0px;
-  width: 220px;
+  width: 320px;
   background: #0007;
 }
 
-.CodeMirror-line > span {
+/* .CodeMirror-line > span {
   background: #000f;
-}
+} */
+
+/* Port of TextMate's waveql theme */
+
+.cm-signal { color: #fcff31; }
+.cm-path   { color: #51bfff; font-weight: bold; }
+.cm-format { color: #31ff98; font-weight: bold; }
+
+.cm-s-waveql.CodeMirror { background: #0c10218e; color: #F8F8F8; }
+.cm-s-waveql div.CodeMirror-selected { background: #ffffff22; }
+.cm-s-waveql .CodeMirror-line::selection, .cm-s-waveql .CodeMirror-line > span::selection, .cm-s-waveql .CodeMirror-line > span > span::selection { background: rgba(37, 59, 118, .99); }
+.cm-s-waveql .CodeMirror-line::-moz-selection, .cm-s-waveql .CodeMirror-line > span::-moz-selection, .cm-s-waveql .CodeMirror-line > span > span::-moz-selection { background: rgba(37, 59, 118, .99); }
+.cm-s-waveql .CodeMirror-gutters { background: #0C1021; border-right: 0; }
+.cm-s-waveql .CodeMirror-guttermarker { color: #FBDE2D; }
+.cm-s-waveql .CodeMirror-guttermarker-subtle { color: #888; }
+.cm-s-waveql .CodeMirror-linenumber { color: #888; }
+.cm-s-waveql .CodeMirror-cursor { border-left: 1px solid #A7A7A7; }
+
+.cm-s-waveql .cm-keyword { color: #FBDE2D; }
+.cm-s-waveql .cm-atom { color: #D8FA3C; }
+.cm-s-waveql .cm-number { color: #D8FA3C; }
+.cm-s-waveql .cm-def { color: #8DA6CE; }
+.cm-s-waveql .cm-variable { color: #FF6400; }
+.cm-s-waveql .cm-operator { color: #FBDE2D; }
+.cm-s-waveql .cm-comment { color: #AEAEAE; }
+.cm-s-waveql .cm-string { color: #61CE3C; }
+.cm-s-waveql .cm-string-2 { color: #61CE3C; }
+.cm-s-waveql .cm-meta { color: #D8FA3C; }
+.cm-s-waveql .cm-builtin { color: #8DA6CE; }
+.cm-s-waveql .cm-tag { color: #8DA6CE; }
+.cm-s-waveql .cm-attribute { color: #8DA6CE; }
+.cm-s-waveql .cm-header { color: #FF6400; }
+.cm-s-waveql .cm-hr { color: #AEAEAE; }
+.cm-s-waveql .cm-link { color: #8DA6CE; }
+.cm-s-waveql .cm-error { background: #880900; color: #F8F8F8; }
+
+.cm-s-waveql .CodeMirror-activeline-background { background: #3C3636; }
+.cm-s-waveql .CodeMirror-matchingbracket { outline:1px solid grey;color:white !important; }
