--- a/vcd/vcdrom.css
+++ b/vcd/vcdrom.css
@@ -1,3 +1,79 @@
+
+.CodeMirror-hints {
+  position: absolute;
+  z-index: 10;
+  overflow: hidden;
+  list-style: none;
+
+  margin: 0;
+  padding: 2px;
+
+  -webkit-box-shadow: 2px 3px 5px rgba(0,0,0,.2);
+  -moz-box-shadow: 2px 3px 5px rgba(0,0,0,.2);
+  box-shadow: 2px 3px 5px rgba(0,0,0,.2);
+  border-radius: 3px;
+  border: 1px solid rgb(21, 150, 150);
+
+  background: hsl(234, 67%, 26%);
+  font-size: 90%;
+  font-family: monospace;
+
+  max-height: 20em;
+  overflow-y: auto;
+}
+
+.CodeMirror-hint {
+  margin: 0;
+  padding: 0 4px;
+  border-radius: 2px;
+  white-space: pre;
+  color: hsl(0, 0%, 79%);
+  cursor: pointer;
+}
+
+li.CodeMirror-hint-active {
+  background: #08f;
+  color: white;
+  font-weight: bold;
+}
+
+.cm-s-waveql.CodeMirror { background: #0c10218e; color: #F8F8F8; }
+.cm-s-waveql div.CodeMirror-selected { background: #ffffff22; }
+.cm-s-waveql .CodeMirror-line::selection, .cm-s-waveql .CodeMirror-line > span::selection, .cm-s-waveql .CodeMirror-line > span > span::selection { background: rgba(37, 59, 118, .99); }
+.cm-s-waveql .CodeMirror-line::-moz-selection, .cm-s-waveql .CodeMirror-line > span::-moz-selection, .cm-s-waveql .CodeMirror-line > span > span::-moz-selection { background: rgba(37, 59, 118, .99); }
+.cm-s-waveql .CodeMirror-gutters { background: #0C1021; border-right: 0; }
+.cm-s-waveql .CodeMirror-guttermarker { color: #FBDE2D; }
+.cm-s-waveql .CodeMirror-guttermarker-subtle { color: #888; }
+.cm-s-waveql .CodeMirror-linenumber { color: #888; }
+.cm-s-waveql .CodeMirror-cursor { border-left: 1px solid #A7A7A7; }
+
+.cm-s-waveql .cm-keyword { color: #FBDE2D; }
+.cm-s-waveql .cm-atom { color: #D8FA3C; }
+.cm-s-waveql .cm-number { color: #D8FA3C; }
+.cm-s-waveql .cm-def { color: #8DA6CE; }
+.cm-s-waveql .cm-variable { color: #FF6400; }
+.cm-s-waveql .cm-operator { color: #FBDE2D; }
+.cm-s-waveql .cm-comment { color: #AEAEAE; }
+.cm-s-waveql .cm-string { color: #61CE3C; }
+.cm-s-waveql .cm-string-2 { color: #61CE3C; }
+.cm-s-waveql .cm-meta { color: #D8FA3C; }
+.cm-s-waveql .cm-builtin { color: #8DA6CE; }
+.cm-s-waveql .cm-tag { color: #8DA6CE; }
+.cm-s-waveql .cm-attribute { color: #8DA6CE; }
+.cm-s-waveql .cm-header { color: #FF6400; }
+.cm-s-waveql .cm-hr { color: #AEAEAE; }
+.cm-s-waveql .cm-link { color: #8DA6CE; }
+.cm-s-waveql .cm-error { background: #880900; color: #F8F8F8; }
+
+.cm-s-waveql .CodeMirror-activeline-background { background: #3C3636; }
+.cm-s-waveql .CodeMirror-matchingbracket { outline:1px solid grey;color:white !important; }
+
+.cm-signal { color: hsl(56, 100%, 68%); }
+.cm-path   { color: hsl(202, 100%, 66%); font-weight: bold; }
+.cm-format { color: hsl(150, 100%, 60%); font-weight: bold; }
+.cm-label  { color: hsl(175, 100%, 86%); font-weight: bold; }
+.cm-mark   { color: hsl(278, 100%, 79%); font-weight: bold; }
+
 @font-face {
   font-family: Iosevka;
   src: url('./iosevka-term-light.woff2') format('woff2')
@@ -119,43 +195,12 @@ text.zxviolet {
   background: #0007;
 }
 
+.CodeMirror-scroll {
+  z-index: 1;
+}
+
 /* .CodeMirror-line > span {
   background: #000f;
 } */
 
 /* Port of TextMate's waveql theme */
-
-.cm-signal { color: #fcff31; }
-.cm-path   { color: #51bfff; font-weight: bold; }
-.cm-format { color: #31ff98; font-weight: bold; }
-
-.cm-s-waveql.CodeMirror { background: #0c10218e; color: #F8F8F8; }
-.cm-s-waveql div.CodeMirror-selected { background: #ffffff22; }
-.cm-s-waveql .CodeMirror-line::selection, .cm-s-waveql .CodeMirror-line > span::selection, .cm-s-waveql .CodeMirror-line > span > span::selection { background: rgba(37, 59, 118, .99); }
-.cm-s-waveql .CodeMirror-line::-moz-selection, .cm-s-waveql .CodeMirror-line > span::-moz-selection, .cm-s-waveql .CodeMirror-line > span > span::-moz-selection { background: rgba(37, 59, 118, .99); }
-.cm-s-waveql .CodeMirror-gutters { background: #0C1021; border-right: 0; }
-.cm-s-waveql .CodeMirror-guttermarker { color: #FBDE2D; }
-.cm-s-waveql .CodeMirror-guttermarker-subtle { color: #888; }
-.cm-s-waveql .CodeMirror-linenumber { color: #888; }
-.cm-s-waveql .CodeMirror-cursor { border-left: 1px solid #A7A7A7; }
-
-.cm-s-waveql .cm-keyword { color: #FBDE2D; }
-.cm-s-waveql .cm-atom { color: #D8FA3C; }
-.cm-s-waveql .cm-number { color: #D8FA3C; }
-.cm-s-waveql .cm-def { color: #8DA6CE; }
-.cm-s-waveql .cm-variable { color: #FF6400; }
-.cm-s-waveql .cm-operator { color: #FBDE2D; }
-.cm-s-waveql .cm-comment { color: #AEAEAE; }
-.cm-s-waveql .cm-string { color: #61CE3C; }
-.cm-s-waveql .cm-string-2 { color: #61CE3C; }
-.cm-s-waveql .cm-meta { color: #D8FA3C; }
-.cm-s-waveql .cm-builtin { color: #8DA6CE; }
-.cm-s-waveql .cm-tag { color: #8DA6CE; }
-.cm-s-waveql .cm-attribute { color: #8DA6CE; }
-.cm-s-waveql .cm-header { color: #FF6400; }
-.cm-s-waveql .cm-hr { color: #AEAEAE; }
-.cm-s-waveql .cm-link { color: #8DA6CE; }
-.cm-s-waveql .cm-error { background: #880900; color: #F8F8F8; }
-
-.cm-s-waveql .CodeMirror-activeline-background { background: #3C3636; }
-.cm-s-waveql .CodeMirror-matchingbracket { outline:1px solid grey;color:white !important; }
