--- a/vcd/vcdrom.css
+++ b/vcd/vcdrom.css
@@ -81,12 +81,14 @@ li.CodeMirror-hint-active {
 
 body {
   overflow: hidden;
+  padding: 0px;
   margin: 0px;
   border: 0px;
   background: #111;
   color: #fff;
   font-family: 'Iosevka';
   /* font-size: 16px; */
+  height: 100%;
 }
 
 .wd-cursor {
